# ink-lib

./: .gitignore  pyproject.toml  requirements.txt  techstack.md  techstack.yml  tox.ini
src/ink/: bard.py  ink.py  ink_types.py  llama2.py  openai.py
tests/: test_ink.py
